Fixed title-animation position, fixed overflow in ios

--- a/src/ui/Layout/layout.css
+++ b/src/ui/Layout/layout.css
@@ -15,6 +15,7 @@
   bottom: 0;
   right: 0;
   left: 0;
+  overflow: hidden;
 }
 
 .layoutTopLeft {
