--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -8,9 +8,11 @@ body {
   line-height: 1.212;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 html {
+  overflow: hidden;
   font-size: 10px;
   width: 100%;
   height: 100%;
